[package]
name = "poker_server"
version = "0.1.0"
edition = "2021"

[dependencies]
poker_core = { path = "../poker_core" }
actix-web = "4.0" # Server framework
actix-cors = "0.7.0" # Middleware for CORS and actix-web
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization (Only certain features)


tokio = { version = "1.41.1", features = ["full"] } # Allows for asynchronous runtime, multithreading, and concurrency
tokio-postgres = "0.7.12" # Postgres client, relational database management system
serde_json = "1.0" # Serialization/Deserialization specifically for JSON


#sqlx = { version = "0.8.2", features = ["postgres", "runtime-actix-native-tls"] } # SQL toolkit, works well with actix
stripe-rust = "0.12.3" # For payment processing
dotenv = "0.15" # For env variables
chrono = "0.4" # For date and time

jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
rand = "0.8"
thiserror = "2.0.3"
